--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+/*buildscript {
+    repositories {
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
+        google()
+    }
+    dependencies {
+        //noinspection UseTomlInstead
+        classpath 'com.android.tools.build:gradle:8.6.2'
+    }
+}*/
+
 plugins {
-alias(libs.plugins.androidApplication) apply false
+    alias(libs.plugins.androidApplication) apply false
 }
+
+
